# dcorsono-website

./: .env  BUTTON_SIZE_COMPARISON.md  Cargo.toml  IMAGE_UPLOAD_GUIDE.md  MOBILE_OPTIMIZATION_IMPLEMENTATION.md  PRODUCT_SETUP_GUIDE.md  README.md  SETUP.md  index.html  move_images.ps1  netlify.toml
frontend/: netlify.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/data/: products.json
frontend/src/: App.css  App.tsx  mobile-optimization.css
frontend/src/components/: BlogPost.tsx  Footer.tsx  Gallery.tsx  InnerLibrary.tsx  Navigation.tsx
frontend/src/components/admin/: ProductAdmin.tsx  ProductImageUpload.tsx
frontend/src/components/auth/: AdminAuth.tsx
frontend/src/components/pages/: CorsonoPage.tsx  Placeholder.tsx
merge_backup_20250826-124934/: .env  index.html  main.rs
migrations/: 001_initial_schema.sql
src/: App.css  App.tsx  main.rs
src/components/: ConsciousnessSection.tsx  ContactSection.tsx  CorsonoPage.tsx  CorsonoSection.tsx  FacetsSection.tsx  Footer.tsx  Gallery.tsx  HeroSection.tsx  HomePage.tsx  InnerGallerySection.tsx  InnerLibrarySection.tsx  Navigation.tsx
src/handlers/: mod.rs
src/models/: blog.rs  cart.rs  mod.rs  order.rs  product.rs  user.rs
src/routes/: api.rs  mod.rs  web.rs
src/utils/: database.rs  jwt.rs  mod.rs
static/css/: components.css  corsono.css  main.css
static/js/: avatar-scene.js  main.js
templates/: art-gallery.html  base.html  corsono-gallery.html  corsono.html  home.html
templates/htmx-partials/: product-grid.html
(+1 files in other folders)
